<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Employee Guarantee Scheme</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="report">Report</string>
    <string name="upload_document">Upload Document</string>
    <string name="attendence">Attendance</string>
    <string name="sync">Sync</string>
    <string name="sync_offline_data">Sync Offline Data</string>
    <string name="labour_registration_saved_offline">Labour Registration Saved Offline</string>
    <string name="entries_to_sync">Entries To Sync</string>
    <string name="documents_saved_offline">Documents Saved Offline</string>
    <string name="sync_labour_data">Sync Labour Data</string>
    <string name="labours_registered_online">Labours Registered Online</string>
    <string name="allocate_work">Allocate Work</string>
    <string name="full_name_required">Full Name Required</string>
    <string name="enter_valid_mobile">Enter Valid Mobile Number</string>
    <string name="select_duration">Select Gender\n</string>
    <string name="select_date_of_birth">Select Date Of Birth</string>
    <string name="select_district">Select District</string>
    <string name="select_village">Select Village</string>
    <string name="select_taluka">Select Taluka</string>
    <string name="enter_valid_id_card_number">Enter Valid 10-digit  MGNREGA ID Card Number</string>
    <string name="select_relationship">Select Relationship</string>
    <string name="select_marital_status">Select Marital Status</string>
    <string name="select_document">Select Document</string>
    <string name="registration_step_1">Registration Step 1</string>
    <string name="registration_step_2">Registration Step 2</string>
    <string name="select_gender">Select Gender</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="mgnrega_card">Mnrega Card</string>
    <string name="voter_id">Voter Id Card</string>
    <string name="labor_photo">Labour Photo</string>
    <string name="location">Location</string>
    <string name="add_documents">Add Documents</string>
    <string name="family_details">Family Details</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="district">District</string>
    <string name="taluka">Taluka</string>
    <string name="village">Village</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="landline_number">Landline Number ( Optional 11-digit)</string>
    <string name="mgnrega_id_card_number">MGNREGA id card number(10-digit)</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="update_details_step_1">Update Details Step 1</string>
    <string name="update_details_step_2">Update Details Step 2</string>
    <string name="gender">Gender</string>
    <string name="landline">Landline</string>
    <string name="mgnrega_id">Mgnrega Id</string>
    <string name="labour_details">Labour Details</string>
    <string name="select_all_documents">Select All Documents</string>
    <string name="enter_document_name">Enter document name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="half_day">Half Day</string>
    <string name="full_day">Full Day</string>
    <string name="error_while_login">Error while login</string>
    <string name="login_successful">Login successful</string>
    <string name="labour_list">Labour List</string>
    <string name="enter_mgnrega_id">Enter MGNREGA Id</string>
    <string name="address">Address -</string>
    <string name="project_duration">Project Duration -</string>
    <string name="select_skills">Select Skill</string>
    <string name="enter_mgnrega_id_1">Enter MGNREGA Id</string>
    <string name="view_attendance">View Attendance</string>
    <string name="select_project">Select Project</string>
    <string name="project_name">Project Name</string>
    <string name="attendance_updating_failed">Attendance updating failed</string>
    <string name="error_occured_during_api_call">Error occured during api call</string>
    <string name="select_day">Select Day</string>
    <string name="uploaded_documents">Uploaded Documents</string>
    <string name="not_approved">Not Approved</string>
    <string name="title_activity_officer_main">OfficerMainActivity</string>
    <string name="title_home">Home</string>
    <string name="uploaded_document">Uploaded Documents</string>
    <string name="please_try_again">Please try again</string>
    <string name="sent_for_approval">Sent For Approval</string>
    <string name="not_approved_list">Not Approved Labours list</string>
    <string name="approved_list">Approved Labours List</string>
    <string name="remarks">Remarks</string>
    <string name="registrations_received_for_approval">Registrations Received For Approval</string>
    <string name="approved">Approved</string>
    <string name="registration_status">Registration Status</string>
    <string name="select_status">Select Registration Status</string>
    <string name="select_reason">Select Reason</string>
    <string name="submit">Submit</string>
    <string name="add_remarks">Add Remarks</string>
    <string name="select_all_details">Select All Details</string>
    <string name="labour_registration_approved">Labour registration approved</string>
    <string name="labour_status_upaded">Labour registration status updated</string>
    <string name="reason">Reason</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="skills">Skills</string>
    <string name="failed_updating_labour_response">response unsuccessful please try again</string>
    <string name="internet_is_not_available_please_check">Internet is not available please check</string>
    <string name="error_while_updating_information_please_try_again">Error while updating information please try again</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="status_">Status :</string>
    <string name="remark_">Remark :</string>
    <string name="date_">Date :</string>
    <string name="from">From</string>
    <string name="to">To  </string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="no_records_found">No records found</string>
    <string name="received_for_approval">Received For Approval</string>
    <string name="documents">Documents</string>
    <string name="labour_registrations">Labour Registrations</string>
    <string name="action">Action</string>
    <string name="document_status">Document Status</string>
    <string name="imageview">ImageView</string>
    <string name="add_document">Add Document</string>
    <string name="response_unsuccessfull">response unsuccessful try again</string>
    <string name="resubmitted">Re-Submitted</string>
    <string name="resubmitted_labour_list">Re-Submitted Labour List</string>
    <string name="re_submitted_docs">Re-Submitted Documents</string>
    <string name="verify_documents">Verify Document</string>
    <string name="re_submitted_labour_list">Resubmitted Labour List</string>
    <string name="skill">Skill</string>
    <string name="pdf_download_failed_try_again">Document download failed please try again</string>
    <string name="update_document">Update Document</string>
    <string name="edit_document">Edit Document</string>
    <string name="please_make_changes_to_document_before_submitting">Please Make Changes To Document Before Submitting</string>
    <string name="retry">Retry</string>
    <string name="approved_document_list">Approved Document List</string>
    <string name="Gramsevak">Gramsevak Name</string>
    <string name="labour_not_found">Labour not found</string>
    <string name="project_list_not_found">project list not found</string>
    <string name="unable_to_mark_please_try_again">Unable to mark  please try again</string>
    <string name="attendance_marked_successfully">Attendance marked successfully</string>
    <string name="no_space_letter_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="not_approved_documents">Not Approved Documents</string>
    <string name="documents_received_for_approval">Documents Received For Approval</string>
    <string name="no_data_found">No data found</string>
    <string name="response_failed">Response Failed</string>
    <string name="labour_details_sent_for_approval">Labour Details Sent For Approval</string>
    <string name="sync_failed_reason">Reason</string>
    <string name="labour_added_successfully">Labour added successfully</string>
    <string name="labour_not_added_please_try_again">Labour not added please try again</string>
    <string name="sync_documents">Sync Documents</string>
    <string name="please_enter_mgnrega_id">Please Enter  MGNREGA Id</string>
    <string name="please_enter_project_name">Please Enter project name</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="image_capture_failed">Image Capture Failed Try Again</string>
    <string name="unknown_request_code">Unknown Request Code</string>
    <string name="numdigits">0123456789</string>
    <string name="enter_valid_landline_number">Enter valid 11-digit landline Number</string>
    <string name="labour_upload_failed">Labour upload failed</string>
    <string name="search_by_project_id_mgnrega_id">Project Name / MGNREGA Id</string>
    <string name="resubmitted_docs">Re-submitted Documents</string>
    <string name="approved_documents">Approved Documents</string>
    <string name="resubmitted_labours">Re-Submitted Labours</string>
    <string name="approved_labours">Approved Labours</string>
    <string name="sent_for_approval_labours">Labour Sent For Approval</string>
    <string name="not_approved_labours">Not Approved Labours</string>
    <string name="file_download_started">file download started</string>
    <string name="no_pdf_viewer_application_found">No PDF viewer application found</string>
    <string name="invalid_content">Content Not Found Please Scan Valid QR Code</string>
    <string name="please_enter_all_details">Please Enter All Details</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit_this_screen">Are you sure you want to exit this screen?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_all_required_details_and_documents"><![CDATA[Please add required details & documents]]></string>
    <string name="unable_to_retrive_location">Unable to retrieve location please enable it</string>
    <string name="enable_location_services_message"><![CDATA[Location services are disabled. App requires location for core features please enable gps & location.?]]></string>
    <string name="labour_information_updated_successfully">Labour information updated successfully</string>
    <string name="labour_details_not_updated_please_try_again">"Labour details not updated please try again "</string>
    <string name="mgnrega_card_id_already_exists_with_another_user">Mgnrega Card Id already exists with another user</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_text">Password must contains at least\n\n1 Uppercase letter\n1 Lowercase letter\n1 Digit\n1 Special character</string>
</resources>