<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.ProfileActivity">
    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/tvDistritct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/taluka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/tvTaluka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/village"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/tvVillage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/tvMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:id="@+id/layoutClickChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ic_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></ImageView>
            <TextView
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/appBlue"></TextView>
        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:visibility="gone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/change_password"
               android:textColor="@color/appBlue"></TextView>

           <com.google.android.material.textfield.TextInputLayout
               app:errorIconDrawable="@null"
               android:id="@+id/txLayoutPasswordOld"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_old_password"
               app:passwordToggleEnabled="true">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etPasswordOld"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp"
                   android:layout_marginTop="8dp"
                   android:layout_marginRight="8dp"
                   android:lines="1"
                   android:inputType="textPassword"
                   android:maxLines="1"
                   android:singleLine="true"
                   android:imeOptions="actionDone"
                   android:background="@drawable/rounded_background_light_green"
                   android:paddingLeft="16dp"/>
           </com.google.android.material.textfield.TextInputLayout>
           <com.google.android.material.textfield.TextInputLayout
               app:errorIconDrawable="@null"
               android:id="@+id/txLayoutPasswordNew"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_new_password"
               app:passwordToggleEnabled="true">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etPasswordNew"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp"
                   android:layout_marginTop="8dp"
                   android:layout_marginRight="8dp"
                   android:lines="1"
                   android:inputType="textPassword"
                   android:maxLines="1"
                   android:singleLine="true"
                   android:imeOptions="actionDone"
                   android:background="@drawable/rounded_background_light_green"
                   android:paddingLeft="16dp"/>
           </com.google.android.material.textfield.TextInputLayout>
           <com.google.android.material.textfield.TextInputLayout
               app:errorIconDrawable="@null"
               android:id="@+id/txLayoutPasswordNewReEnter"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/re_enter_new_password"
               app:passwordToggleEnabled="true">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etPasswordNewReEnter"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp"
                   android:layout_marginTop="8dp"
                   android:layout_marginRight="8dp"
                   android:lines="1"
                   android:inputType="textPassword"
                   android:maxLines="1"
                   android:singleLine="true"
                   android:imeOptions="actionDone"
                   android:background="@drawable/rounded_background_light_green"
                   android:paddingLeft="16dp"/>
           </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:text="@string/password_text"
               android:textColor="@color/appBlue"></TextView>

           <Button
               android:textAllCaps="false"
               android:id="@+id/btnSubmit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginLeft="16dp"
               android:layout_marginTop="16dp"
               android:layout_marginRight="16dp"
               android:fontFamily="@font/poppins"
               android:text="@string/submit"/>
       </LinearLayout>
    </LinearLayout>

</ScrollView>