<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/black"
                    android:text="@string/status_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tvStatus"
                    android:layout_marginLeft="8dp"
                    android:text="Vishvambhar Gore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    android:text="Reason :"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tvReason"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    android:text="@string/remark_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tvRemark"
                    android:layout_marginLeft="8dp"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/black"
                    android:text="@string/date_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tvDate"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>
            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>