<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="Mark Attendance"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/appBlue"></TextView>

                <AutoCompleteTextView
                    android:hint="@string/select_project"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:inputType="none"
                    android:id="@+id/actSelectProjectForAttendance"
                    android:drawableEnd="@drawable/arrow_dropdown"
                    android:background="@drawable/rounded_background_light_green"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/gender"
                        android:layout_width="24dp"
                        android:layout_height="24dp">
                    </ImageView>
                    <TextView
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins"
                        android:layout_gravity="center"
                        android:id="@+id/tvFullName"
                        android:layout_weight="1"
                        android:paddingLeft="16dp"
                        android:hint="Full Name"
                        android:inputType="text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TextView>
                </LinearLayout>
                <RadioGroup
                    android:id="@+id/radioGroupAttendance"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:text="@string/half_day"
                        android:id="@+id/radioButtonHalfDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></RadioButton>

                    <RadioButton
                        android:id="@+id/radioButtonFullDay"
                        android:layout_marginLeft="16dp"
                        android:text="@string/full_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></RadioButton>

                </RadioGroup>
            </LinearLayout>
            <ImageView
                android:scaleType="center"
                android:id="@+id/ivPhoto"
                android:layout_marginTop="16dp"
                android:layout_width="100dp"
                android:layout_height="100dp"></ImageView>
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="Submit"
            android:background="@drawable/rounded_backgroud_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>






</androidx.cardview.widget.CardView>